# Llama-Agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.server  README.md  llama_deploy.toml  main.py  pyproject.toml  requirements-server.txt  requirements.txt  server.py  workflow.py
agents/: orchestrator.py
deployment/: deploy.py
models/: schemas.py
tools/: matching_tools.py  parser_tools.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/pages/: Home.tsx
webapp/: .env.example  index.html  package-lock.json  package.json  vercel.json
webapp/api/: match.js
webapp/src/: App.tsx  index.css
webapp/src/components/: FileUpload.tsx  ResultView.tsx  StepIndicator.tsx
